# pkg/controllers/addresses.go
@@ -10,8 +10,8 @@ import (
 	"github.com/google/uuid"
 )
 
-type AddUpdateAddressBody struct {
-	UserId uuid.UUID `json:"userId"`
+type addUpdateAddressBody struct {
+	UserId uuid.UUID `json:"userId" binding:"required"`
 	Street string    `json:"street"`
 	City   string    `json:"city"`
 	State  string    `json:"state"`
@@ -19,6 +19,13 @@ type AddUpdateAddressBody struct {
 	Type   string    `json:"type"`
 }
 
+// FetchAddresses retrieves a list of all addresses in the system
+// @Summary retrieve a list of all addresses in the system
+// @Tags addresses
+// @ID fetch-all-addrs
+// @Produce json
+// @Success 200 {object} []models.Address
+// @Router /addresses [get]
 func (h handler) FetchAddresses(c *gin.Context) {
 	addrs, err := h.addresses.FetchAddresses()
 	if err != nil {
@@ -28,6 +35,16 @@ func (h handler) FetchAddresses(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, addrs)
 }
 
+// FetchAddress retrieves a single address by Id
+// @Summary retrieve an address by Id
+// @Tags addresses
+// @ID fetch-addr
+// @Produce json
+// @Param id path string true "address ID"
+// @Success 200 {object} models.Address
+// @Failure 400 {object} common.ApiError
+// @Failure 404 {object} common.ApiError
+// @Router /addresses/{id} [get]
 func (h handler) FetchAddress(c *gin.Context) {
 	idParam := c.Param("id")
 	id, err := uuid.Parse(idParam)
@@ -50,12 +67,35 @@ func (h handler) FetchAddress(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, addr)
 }
 
+// FetchAddressesForUser retrieves a list of addresses associated with a user
+// @Summary retrieve a list of addresses by the user's Id
+// @Tags users, addresses
+// @ID fetch-addrs-for-user
+// @Produce json
+// @Param id path string true "user ID"
+// @Success 200 {object} []models.Address
+// @Failure 400 {object} common.ApiError
+// @Failure 404 {object} common.ApiError
+// @Router /users/{id}/addresses [get]
 func (h handler) FetchAddressesForUser(c *gin.Context) {
 	idParam := c.Param("id")
 	userId, err := uuid.Parse(idParam)
 	if err != nil {
 		c.IndentedJSON(http.StatusBadRequest, common.ApiError{Message: fmt.Sprintf("Id [%s] is not a valid UUID", idParam), Error: err})
 		return
+	}
+
+	//lookup user to make sure they exist, and send back 404 if they do not
+	_, err = h.users.SelectOneUser(userId)
+	if err != nil {
+		switch e := err.(type) {
+		case *models.ErrModelNotFound:
+			c.IndentedJSON(http.StatusNotFound, common.ApiError{Message: fmt.Sprintf("No user exists with Id [%s]", idParam), Error: e})
+			return
+		default:
+			c.IndentedJSON(http.StatusInternalServerError, common.ApiError{Message: fmt.Sprintf("Error fetching addresses for user with Id [%s]", idParam), Error: err})
+			return
+		}
 	}
 
 	addrs, err := h.addresses.FindAddressesByUserId(userId)
@@ -66,9 +106,17 @@ func (h handler) FetchAddressesForUser(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, addrs)
 }
 
-// AddAddress stores a new address for a user
+// AddAddress stores a new address
+// @Summary store a new address
+// @Tags addresses
+// @ID add-addr
+// @Produce json
+// @Param data body addUpdateAddressBody true "new address data"
+// @Success 200 {object} []models.Address
+// @Failure 400 {object} common.ApiError
+// @Router /addresses [post]
 func (h handler) AddAddress(c *gin.Context) {
-	var reqBody AddUpdateAddressBody
+	var reqBody addUpdateAddressBody
 
 	if err := c.BindJSON(&reqBody); err != nil {
 		c.IndentedJSON(http.StatusBadRequest, common.ApiError{Message: "Invalid request body.", Error: err})
@@ -91,8 +139,19 @@ func (h handler) AddAddress(c *gin.Context) {
 	c.IndentedJSON(http.StatusCreated, newAddr)
 }
 
+// AddAddress updates an existing address
+// @Summary update an existing address by Id
+// @Tags addresses
+// @ID update-addr
+// @Produce json
+// @Param id path string true "address ID"
+// @Param data body addUpdateAddressBody true "updated address data"
+// @Success 200 {object} []models.Address
+// @Failure 400 {object} common.ApiError
+// @Failure 404 {object} common.ApiError
+// @Router /addresses/{id} [put]
 func (h handler) UpdateAddress(c *gin.Context) {
-	var reqBody AddUpdateAddressBody
+	var reqBody addUpdateAddressBody
 	idParam := c.Param("id")
 	id, err := uuid.Parse(idParam)
 	if err != nil {
@@ -122,6 +181,16 @@ func (h handler) UpdateAddress(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, updatedAddr)
 }
 
+// DeleteAddress deletes an existing address
+// @Summary remove an existing address by Id
+// @Tags addresses
+// @ID delete-addr
+// @Produce json
+// @Param id path string true "address ID"
+// @Success 204
+// @Failure 400 {object} common.ApiError
+// @Failure 404 {object} common.ApiError
+// @Router /addresses/{id} [delete]
 func (h handler) DeleteAddress(c *gin.Context) {
 	idParam := c.Param("id")
 	id, err := uuid.Parse(idParam)
